# EmulStick-Desktop

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: plan.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ble.rs  input.rs  lib.rs  main.rs  persistence.rs  protocol.rs  state.rs
src/lib/: ConnectionStatus.svelte  DeviceScanner.svelte  LockModeIndicator.svelte  PassthroughControls.svelte  VideoFeed.svelte  stores.ts
src/routes/: +page.svelte
