[package]
name = "emulstick-desktop"
version = "0.1.0"
description = "EmulStick Desktop - BLE KVM Controller"
authors = ["you"]
edition = "2021"

[lib]
name = "emulstick_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
rdev = "0.5"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

